# arkpz-pzpi-22-6-horishnia-kateryna

./: LICENSE  README.md
Pract1/: arkpz-pzpi-22-6-Horishnia-Kateryna-pract1.txt  arkpz-pzpi-22-6-horishnia-kateryna-pract1.txt
Pract1/arkpz-pzpi-22-6-Horishnia-Kateryna-pract1/: code-examples-pract1.scala
Pract1/arkpz-pzpi-22-6-horishnia-kateryna-pract1/: code-examples-pract1.scala
Pract2/: arkpz-pzpi-22-6-Horishnia-Kateryna-pract2.txt  arkpz-pzpi-22-6-horishnia-kateryna-pract2.txt
Pract2/arkpz-pzpi-22-6-Horishnia-Kateryna-pract2/: code-examples-pract2.cpp
Task1/: arkpz-pzpi-22-6-horishnia-kateryna-task1.txt
Task2/: arkpz-pzpi-22-6-horishnia-kateryna-task2.txt
Task2/arkpz-pzpi-22-6-horishnia-kateryna-task2/: app.py  models.py  request_models.py  requirements.txt
Task3/: arkpz-pzpi-22-6-horishnia-kateryna-task3.txt
Task3/arkpz-pzpi-22-6-horishnia-kateryna-task3/: app.py  models.py  request_models.py  requirements.txt
Task4/: arkpz-pzpi-22-6-horishnia-kateryna-task4.txt
Task4/arkpz-pzpi-22-6-horishnia-kateryna-task4/: CMakeLists.txt  main.cpp
Task5/: arkpz-pzpi-22-6-horishnia-kateryna-task5.txt
Task5/arkpz-pzpi-22-6-horishnia-kateryna-task5/: Dockerfile  app.py  docker-compose.yml  models.py  request_models.py  requirements.txt
